--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home | Toro Investimentos</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
-    
+    <main class="container">
+        <nav class="navbar navbar-light bg-light">
+            <div class="colum">
+                <a class="navbar-brand" href="#">
+                    <img src="./images/logo.png" alt="logo toro investimentos" width="200">
+                </a>
+            </div>
+            <div class="colum">
+                <a class="navbar-brand navbar-item" href="#">BOLSA</a>
+                <a class="navbar-brand navbar-item" href="#">MAIS INVESTIMENTOS</a>
+                <a class="navbar-brand navbar-item" href="#">APRENDA</a>
+                <a class="navbar-brand navbar-item" href="#">PLATAFORMAS</a>
+                <a class="navbar-brand navbar-item" href="#">AJUDA</a>
+            </div>
+            <div class="colum">
+                <button class="btn btn-outline-sucess" type="button">Entre</button>
+                <button class="btn" type="button">Cadastre-se</button>
+            </div>
+        </nav>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
