--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <main class="container">
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar">
             <div class="colum">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/logo.png" alt="logo toro investimentos" width="200">
+                    <img src="./images/logo.png" alt="logo toro investimentos" width="100">
                 </a>
             </div>
             <div class="colum">
@@ -25,8 +25,8 @@
                 <a class="navbar-brand navbar-item" href="#">AJUDA</a>
             </div>
             <div class="colum">
-                <button class="btn btn-outline-sucess" type="button">Entre</button>
-                <button class="btn" type="button">Cadastre-se</button>
+                <button class="button-outline-purple" type="button">Entrar</button>
+                <button class="button-outline-purple" type="button">Cadastre-se</button>
             </div>
         </nav>
     </main>
