--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
                 <button class="button-outline-purple" type="button">Cadastre-se</button>
             </div>
         </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="./images/bg-first-section.png" alt="celular ilustrando algumas ações investidas" class="home-figure">
+                </div>
+                <div class="col center-items">
+                    <img src="./images/toroinvestimentos-1625670718-toro-sant-principalpng.png" alt="logo da empresa e do santander" width="280">
+                    <h1>Corretagem Zero e o jeito mais fácil de investir na Bolsa.</h1>
+                    <p>Invista na Bolsa, Renda Fixa e Fundos sem a complexidade dos Home Brokers e sem pagar corretagem. Com a Toro você tem uma plataforma completa e a credibilidade de uma empresa que é parte do Santander Brasil.</p>
+                    <button class="button-purple">Cadastre-se grátis</button>
+                </div>
+            </div>
+            
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
