Downloaded the font used in this project, and end the css of the main page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <div class="colum">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/logo.png" alt="logo toro investimentos" width="100">
+                    <img src="./images/logo.svg" alt="logo toro investimentos" width="100">
                 </a>
             </div>
             <div class="colum">
@@ -31,22 +31,23 @@
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-5">
                     <img src="./images/bg-first-section.png" alt="celular ilustrando algumas ações investidas" class="home-figure">
                 </div>
                 <div class="col center-items">
-                    <img src="./images/toroinvestimentos-1625670718-toro-sant-principalpng.png" alt="logo da empresa e do santander" width="280">
-                    <h1>Corretagem Zero e o jeito mais fácil de investir na Bolsa.</h1>
-                    <p>Invista na Bolsa, Renda Fixa e Fundos sem a complexidade dos Home Brokers e sem pagar corretagem. Com a Toro você tem uma plataforma completa e a credibilidade de uma empresa que é parte do Santander Brasil.</p>
+                    <img src="./images/toroinvestimentos-1625670718-toro-sant-principalpng.svg" alt="logo da empresa e do santander" width="280" class="margin-home"> 
+                    <h1 class="margin-home"><strong>Corretagem Zero</strong> jeito 
+                    <br> mais fácil de investir na Bolsa.</h1>
+                    <p class="margin-home">Invista na Bolsa, Renda Fixa e Fundos sem a complexidade dos Home Brokers e sem pagar corretagem. Com a Toro você tem uma plataforma completa e a credibilidade de uma empresa que é parte do Santander Brasil.</p>
                     <button class="button-purple">Cadastre-se grátis</button>
                 </div>
             </div>
         </div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="row">
+            <div class="col"><div class="card"></div></div>
+            <div class="col"><div class="card"></div></div>
+            <div class="col"><div class="card"></div></div>
+            <div class="col"><div class="card"></div></div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
