--- a/pages/register.html
+++ b/pages/register.html
@@ -7,26 +7,34 @@
     <title>Cadastre-se | Toro investimentos</title>
     <link rel="icon" type="image/png" sizes="32x32" href="../images/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/register.css">
+    <link rel="stylesheet" href="../style/register.css">
 </head>
 <body>
-    <div class="container">
-        <div class="colum">
+  <a class="fixed-top m-3" href="#">&#8592; Ir para site</a>
+    <div class="d-flex flex-column justify-content-center align-items-center h-100">
+        <img src="../images/logo.svg" width="200">
+        <div class="card-form m-4">
+            <h1>Cadastre-se grátis para investir</h1>
             <form>
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">E-mail</label>
+                    <label for="exampleInputEmail1" class="form-label">Nome completo:</label>
+                    <input type="text"  class="form-control" id="name" aria-describedby="emailHelp">
+                  </div>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">E-mail:</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Confirme a senha:</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="exampleInputPassword1" class="form-label">CPF:</label>
+                    <input type="tel" class="form-control" id="exampleInputPassword1">
                   </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Senha (6 a 16 caracteres):</label>
+                  <input type="password" class="form-control" maxlength="16" id="exampleInputPassword1">
+                </div>
+                <button type="submit" class="button-purple">Continue</button>
               </form>
+              <p class="mt-3">Ao continuar, você aceita a nossa <a href="https://cdn.toroinvestimentos.com.br/corretora/documents/politica_de_privacidade_grupo_toro.pdf">Política de Privacidade</a></p>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
