started the developing of the backend

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <a class="navbar-brand navbar-item" href="#">AJUDA</a>
             </div>
             <div class="colum">
-                <button class="button-outline-purple" type="button">Entrar</button>
-                <button class="button-outline-purple" type="button">Cadastre-se</button>
+                <a class="button-outline-purple" type="button" href="http://localhost:3456/signup">Entrar</a>
+                <a class="button-outline-purple" type="button" href="http://localhost:3456/register">Cadastre-se</a>
             </div>
         </nav>
         <div class="container">
@@ -39,7 +39,7 @@
                     <h1 class="margin-home"><strong>Corretagem Zero</strong> jeito 
                     <br> mais fácil de investir na Bolsa.</h1>
                     <p class="margin-home">Invista na Bolsa, Renda Fixa e Fundos sem a complexidade dos Home Brokers e sem pagar corretagem. Com a Toro você tem uma plataforma completa e a credibilidade de uma empresa que é parte do Santander Brasil.</p>
-                    <button class="button-purple">Cadastre-se grátis</button>
+                    <a class="button-purple" href="http://localhost:3456/register">Cadastre-se grátis</a>
                 </div>
             </div>
         </div>
@@ -51,5 +51,6 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="script/index.js"></script>
 </body>
 </html>
